Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,14 +8,26 @@ trigger:
 
 pool:
   test_node
+resources:
+- repo: self
+variables:
+  imageRepository: 'https://github.com/dhawalepraful1310/NodeJs_Demo.git'
+  containerRegistry: 'nodedeployapp.azurecr.io'
+  dockerfilePath: '**/Dockerfile'
+  dockerRegistryServiceConnection: '1964360c-68cd-442c-a83b-68c7a0218a6f'
+  tag: '$(Build.BuildId)'
 
 steps:
-- task: NodeTool@0
+- task: Docker@2
+  displayName: Build and push an image to container registry
   inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
+    command: buildAndPush
+    repository: $(imageRepository)
+    dockerfile: $(dockerfilePath)
+    containerRegistry: $(dockerRegistryServiceConnection)
+    tags: |
+      $(tag)
 
-- script: |
-    npm install
-    npm run build
-  displayName: 'npm install and build'
+- upload: manifests
+  artifact: manifests
+  
