--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ stages:
   - job: Build
     displayName: Build
     pool:
-      MDEVPC-28
+      Task_NodeJs
     steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
