--- a/deployment/deployment.yml
+++ b/deployment/deployment.yml
@@ -20,4 +20,22 @@ spec:
           name: app
           ports:
             - containerPort: 5000
+         
+-- 
+apiVersion: v1
+kind: Service
+metadata:
+  name: app-service
+  labels:
+    app: app
+ # namespace: app
+spec:
+  type: NodePort
+  ports:
+  - port: 5000
+    protocol: TCP
+    targetPort: 5000
+    nodePort: 31000
+  selector:
+    app: app
           
